# adaptive-controller

./: README.md
cmd/apague/: adaptive_gains.csv  env.env  main.go
data/: data-trained.csv
data/ccgrid-2026/: ccgrid-2026-1000.xlsx  ccgrid-2026-2500.xlsx  ccgrid-graphic-cumulative-rmse.py  ccgrid-graphic-setpoint-rate.py  ccgrid-variable-rmse-evolution-static.csv  cgrid-2026-variable-2500-setpoint-rate.csv
data/nca-2026/: ccgrid-band-graphic.py  (+6 more)
internal/controllers/neural/: =2.0  Adaptive-PID-errors.csv  Adaptive-PID-with-errors.csv  adaptiveNN.py  adaptive_pid.py  apague-errors.csv  arx.py  data-analysis.xlsx  data-errors-AdaptivePID.csv  data-experiments-seams-2026.csv  error-signals.csv  graphy-generator.py  last_gains.json  last_gains_mlp.json  last_gains_pi.json  linear.py  novo_estado.csv  output.csv  pid_gains.csv  plant_io.csv  pyproject.toml  requirements-full.txt  requirements.txt
internal/controllers/neural/ControladorAdaptive.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
internal/controllers/neural/adaptive_pid/: __init__.py  adaptive_pid.py  base.py  init.py
internal/controllers/neural/adaptive_pid/core/: __init__.py  orchestrator.py
internal/controllers/neural/adaptive_pid/models/: __init__.py  pid_model.py
internal/controllers/neural/adaptive_pid/tunners/: __init__.py  bayesian_tuner.py  evolution_timer.py  optuna_tuner.py  pso_tuner.py  rl_tuner.py  spsa_tuner.py
internal/controllers/neural/adaptive_pid/utils/: __init__.py  batch.py  evaluation.py  history.py  jitter.py
internal/controllers/neural/examples/: run_loop.py
(+40 files in other folders)
