[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ControladorAdaptive" # Escolha um nome para o seu pacote
version = "0.0.1" 
# Adicione dependências se necessário (ex: requires = ["pandas"])

[tool.setuptools.packages]
find = {where = ["."]}
